--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-.logo {
-  height: 6em;
+body {
+  margin: 0;
 }
-
-.App {
+.app {
   width: 100%;
   height: 100%;
   background-color: #0c0a1c;
@@ -15,7 +14,9 @@
   left: -135px;
 }
 
-.rotate {
+/* For infinite rotate */
+
+/* .rotate {
   animation: spinner 1.5s linear infinite;
 }
 @keyframes spinner {
@@ -23,3 +24,12 @@
     transform: rotate(360deg);
   }
 }
+
+.white {
+  position: relative;
+  color: white;
+}
+
+.black {
+  color: #0c0a1c;
+} */
